sqlxo/tests/orm/derive/try/err/unnamed_fields.stderr
error: `Query` requires named fields
 --> tests/orm/derive/try/err/unnamed_fields.rs:8:13
  |
8 | pub struct T(String, i32);
  |             ^^^^^^^^^^^^^
